# MRI_utils

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
ressources/: B0_overlayed.ipe
src/MRI_utils/: __init__.py
src/MRI_utils/bids/: __init__.py  _bids.py
src/MRI_utils/dataset/: __init__.py  dataset.py
src/MRI_utils/fmri/: __init__.py  fmri.py
src/MRI_utils/kspace/: __init__.py  _utils.py
src/MRI_utils/nifti/: __init__.py  nifti.py  slicer.py
src/MRI_utils/plot/: __init__.py  plot.py  quadrants.py
