[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MRI_utils"
version = "0.1.0"
description = "my tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-2-Clause" }
authors = [
  { name = "Joseph Obriot", email = "joseph.obriot@cea.fr" }
]

dependencies = [
  "numpy",
  "matplotlib",
]

[tool.coverage.run]
omit = ["*tests*", "*__init__*", "*setup.py*", "*_version.py*", "*example*"]
relative_files = true
source = ["src"]
